# autoknowledge

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  config.toml.example  docker-compose.yml  pyproject.toml
services/embeddings/: Dockerfile  start.sh
src/autoknowledge/: __init__.py  __main__.py  cli.py  config.py  types.py
src/autoknowledge/embedding/: __init__.py  client.py
src/autoknowledge/index/: __init__.py  bm25_store.py  chroma_store.py  hash_tracker.py
src/autoknowledge/indexer/: __init__.py  pipeline.py
src/autoknowledge/ingestion/: __init__.py  converter.py  extractor.py  frontmatter.py  image_describer.py  pipeline.py  scanner.py
src/autoknowledge/retrieval/: __init__.py  filters.py  hybrid.py
src/autoknowledge/server/: __init__.py  mcp_server.py  tools.py
src/autoknowledge/vault/: __init__.py  chunker.py  parser.py  scanner.py  wikilinks.py
tests/: conftest.py  test_config.py
tests/embedding/: test_client.py
tests/index/: test_bm25_store.py  test_chroma_store.py  test_hash_tracker.py
tests/ingestion/: conftest.py  test_converter.py  test_extractor.py  test_frontmatter.py  test_pipeline.py  test_scanner.py
tests/integration/: test_index_pipeline.py
tests/retrieval/: test_filters.py  test_hybrid.py
tests/server/: test_tools.py
tests/vault/: test_chunker.py  test_parser.py  test_scanner.py  test_wikilinks.py
