[project]
name = "autoknowledge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0,<2.0.0",
    "chromadb>=0.5.0",
    "rank-bm25>=0.2.2",
    "httpx>=0.27.0",
    "python-frontmatter>=1.1.0",
    "tiktoken>=0.7.0",
    "pydantic>=2.0",
    "pymupdf4llm>=0.0.17",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
vision = [
    "anthropic>=0.40.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
    "respx>=0.21",
]

[project.scripts]
autoknowledge = "autoknowledge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoknowledge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.15.5",
]
